RESOLVED FIXED231505
Error the encoder in case we cannot create a RemoteVideoSample
https://bugs.webkit.org/show_bug.cgi?id=231505
Summary Error the encoder in case we cannot create a RemoteVideoSample
youenn fablet
Reported 2021-10-11 02:29:05 PDT
Error the encoder in case we cannot create a RemoteVideoSample
Attachments
Patch (1.94 KB, patch)
2021-10-11 02:33 PDT, youenn fablet
no flags
Patch for landing (2.27 KB, patch)
2021-10-12 01:35 PDT, youenn fablet
no flags
youenn fablet
Comment 1 2021-10-11 02:29:16 PDT
youenn fablet
Comment 2 2021-10-11 02:33:05 PDT
Eric Carlson
Comment 3 2021-10-11 08:57:27 PDT
Comment on attachment 440767 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=440767&action=review > Source/WebKit/WebProcess/GPU/webrtc/LibWebRTCCodecs.cpp:451 > + if (!sample) > + return WEBRTC_VIDEO_CODEC_ERROR; It might be worth logging this error too.
youenn fablet
Comment 4 2021-10-12 01:35:18 PDT
Created attachment 440908 [details] Patch for landing
EWS
Comment 5 2021-10-12 02:45:24 PDT
Committed r283975 (242821@main): <https://commits.webkit.org/242821@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 440908 [details].
Alexey Proskuryakov
Comment 6 2021-10-22 10:42:08 PDT
*** Bug 232006 has been marked as a duplicate of this bug. ***
Sam Sneddon [:gsnedders]
Comment 7 2021-10-27 22:06:28 PDT
*** Bug 232381 has been marked as a duplicate of this bug. ***
Sam Sneddon [:gsnedders]
Comment 8 2021-10-27 22:06:49 PDT
*** Bug 232416 has been marked as a duplicate of this bug. ***
youenn fablet
Comment 9 2021-10-29 05:40:39 PDT
*** Bug 232445 has been marked as a duplicate of this bug. ***
Sam Sneddon [:gsnedders]
Comment 10 2021-10-29 13:31:33 PDT
*** Bug 232490 has been marked as a duplicate of this bug. ***
ARUN GANESHAN
Comment 11 2021-10-29 17:49:28 PDT
HI team whats the update about this issues . What release will it be merged ?
Eric
Comment 12 2021-10-29 18:48:33 PDT
OMG. How do you do QA at Apple? In times of Covid, you've just ruined WebRTC H264 on Safari? And it went all the way to iOS 15.1 "stable"? Now we have to tell ALL our clients NOT to use Apple products! Well done.
P Pramod
Comment 13 2021-10-31 01:22:34 PDT
It would help to get an update on the plan to address this issue?
Dag-Inge Aas
Comment 14 2021-11-02 00:02:34 PDT
There was an update here: https://bugs.webkit.org/show_bug.cgi?id=232006#c9 I can confirm this is fixed in iOS 15.2 Public Beta.
rychouwei
Comment 15 2021-11-07 19:00:32 PST
two workaround: 1. Add this description to offer&answer sdp: "urn:3gpp:video-orientation", it will not cause page crash. 2. Use canvas.captureStream to capture a new video track from getUserMedia. Then, publish canvas track will not cause page crash.
Shanker Pulugam
Comment 16 2021-11-11 00:04:14 PST
Hi Webkit team, Tried second workaround, used canvas captureStream from getUserMedia and publish canvas track but still crashes. Can you please provide a working sample or any other way to fix the issue.
rychouwei
Comment 17 2021-11-11 00:22:00 PST
I'm not form webkit team. The second workround works for our product. You can try this sample to make a call on iOS 15.1: https://sdk-web-1252463788.cos.ap-hongkong.myqcloud.com/trtc/webrtc/test/rychou-test/addTransceiver/subscribe/index.html This sample use canvas.captureStream and H.264 codec. BTW, there is anothor workaround: use VP8 codec, do not use H.264
Alexey Proskuryakov
Comment 18 2021-11-12 16:13:54 PST
*** Bug 233038 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.