Cherry-pick r283975. rdar://problem/84630618

Error the encoder in case we cannot create a RemoteVideoSample
    https://bugs.webkit.org/show_bug.cgi?id=231505
    <rdar://83975229>

    Reviewed by Eric Carlson.

    * WebProcess/GPU/webrtc/LibWebRTCCodecs.cpp:
    (WebKit::LibWebRTCCodecs::encodeFrame):
    RemoteVideoSample::create can return nullptr if we cannot get an IOSurface from the pixel buffer or if pixel buffer is null
    due to VTPixelBufferConformerCopyConformedPixelBuffer failing.
    In that case, we error the encoder instead of trying to encode the frame.

    Canonical link: https://commits.webkit.org/242821@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@283975 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/240672.289@safari-612-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-612-branch@284831 268f45cc-cd09-0410-ab3c-d52691b4dbfc